server with new table for events. all events requests are working.
